# mach-c

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.ll  spec.md  syntax.mach  test.mach
.github/: copilot-instructions.md
doc/: Mach.md  README.md  builtins.mach  cli.md  config.md  control_flow.mach  declarations-and-modules.md  everything.mach  examples.md  expressions.md  external.mach  ffi.md  functions.mach  intrinsics-and-runtime.md  intrinsics.md  language-overview.md  language.md  lexical-structure.md  modules.md  pointers.mach  scratchpad.mach  statements.md  types.mach  types.md  variables.mach  variadic-functions.md
include/: analysis.h  analyzer.h  architecture.h  ast.h  build.h  builtin.h  codegen.h  commands.h  compilation.h  compilation_type.h  compiler.h  config.h  context.h  dependancy.h  file.h  filesystem.h  ioutil.h  keywords.h  lexer.h  module.h  node.h  op.h  operator.h  options.h  parser.h  platform.h  preprocessor.h  project.h  scope.h  semantic.h  semantic_analyzer.h  semantic_new.h  symbol.h  symbol_table.h  symbols.h  target.h  token.h  type.h  visitor.h
runtime/: runtime.mach
src/: analysis.c  analyzer.c  architecture.c  ast.c  build.c  builtin.c  codegen.c  commands.c  compilation.c  compiler.c  config.c  context.c  dependancy.c  file.c  filesystem.c  ioutil.c  keywords.c  lexer.c  main.c  module.c  node.c  op.c  operator.c  options.c  parser.c  platform.c  preprocessor.c  project.c  scope.c  semantic.c  semantic_analyzer.c  semantic_new.c  symbol.c  symbol_table.c  symbols.c  target.c  token.c  type.c  visitor.c
std/: mach.toml
std/src/: c.mach
std/src/io/: console.mach
std/src/types/: bool.mach  string.mach
